--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,15 @@
               <p class="trip-info__dates">Sometimes…</p>
             </div>
           </section>
-          <div class="trip-main__trip-controls  trip-controls">
-            <div class="trip-controls__filters">
-              <h2 class="visually-hidden">Filter events</h2>
+          <!-- <div class="trip-main__trip-controls  trip-controls"> -->
+            <!-- <div class="trip-controls__filters"> -->
+              <!-- <h2 class="visually-hidden">Filter events</h2> -->
               <!-- Фильтры -->
-            </div>
-          </div>
+            <!-- </div> -->
+          <!-- </div> -->
 
-          <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
+          <!-- Кнопка добавления -->
+          <!-- <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button> -->
         </div>
       </div>
     </header>
@@ -44,5 +45,6 @@
           </section>
       </div>
     </main>
+    <script src="./bundle.js"></script>
   </body>
 </html>
