--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
       <div class="page-body__container">
           <section class="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
-
             <!-- Сортировка -->
-
-            <!-- Контент -->
+            <ul class="trip-events__list">
+              <!-- Контент -->
+            </ul>
           </section>
       </div>
     </main>
